# vibe2dlayout

./: .gitignore  changes.md  ecosystem.config.cjs  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: loc-tracking.yml  test.yml
docs/: code-quality-audit.md  index.html  loc-history.csv  power-ups.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/actions/: adapters.ts  coreActions.ts  index.ts  registry.ts  types.ts  useActionRegistry.ts
src/hooks/: useDocumentShortcuts.ts  useDynamicFonts.ts  useFontMetadataEnrichment.ts  useLibraryFontMetadataEnrichment.ts  usePanZoom.ts  usePinchGestures.ts  usePowerUpsRuntime.ts  useTauriMenu.ts  useTheme.ts
src/logging/: logger.ts  store.ts  types.ts
src/model/: ShapeSupervisor.ts  connector.ts  dimensionAsset.ts  document.ts  grid.ts  guide.ts  imageAsset.ts  index.ts  library.ts  pageDimensions.ts  palette.ts  pixelAsset.ts  powerUps.ts  selection.ts  shapes.ts  textStyle.ts  theme.ts  transform.ts  variable.ts
src/powerups/: builtIns.tsx  formsBuiltIn.tsx  index.ts  physicsRuntime.ts  registry.ts  shapeRegistry.ts  slidesBuiltIn.tsx  types.ts
src/store/: context.tsx  history.ts  index.ts  reducer.ts  selectors.ts  types.ts
src/utils/: RoughPaths.tsx  RoughSvgPaths.tsx  alignment.ts  alignmentSnap.ts  allLucideIcons.ts  buttonIcons.tsx  connectors.ts  emojiData.ts  exportBounds.ts  (+31 more)
tests/: setup.ts
(+200 files in other folders)
