[package]
name = "app"
version = "0.1.0"
description = "Limn"
authors = ["Josh Marinacci"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
